frontend/src/App.css
/* ... */
.descriptionWrapper {
  text-align: center;
}

.welcomeDescriptionInput {
  border: solid 1px #cccccc;
  padding: 2%;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1em;
  color: #222222;
  width: 80%;
  padding-bottom: 15%;
}

.welcomeDescriptionInput:focus {
  outline: solid 1px #82da05;
}

/* End of welcome page 3 style */

.backButton {
  color: #4a4a4a;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  position: absolute;
  font-size: 1.3em;
  left: 2%;
  top: 2%;
  background-color: Transparent;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
  overflow: hidden;
  z-index: 2;
  transition: all 0.8s ease-in-out !important;
}

.left {
  transform: rotate(135deg);
  -webkit-transform: rotate(135deg);
}

/* user details page */

.userRating {
  color: #3e3e3e;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 2em;
  width: 100%;
  text-align: center;
  padding-top: 6%;
}

.userRating1 {
  color: #3e3e3e;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 1.5em;
  width: 100%;
  text-align: center;
  padding-top: 6%;
}

.userDetailsDivider {
  width: 100%;
  height: 7vh;
}

.descriptionDetailsWrapper {
  text-align: center;
  padding: 0% 6% 6% 6%;
}

.score {
  font-weight: 500;
}

/* job Details Page */
.jobDetailsName {
  color: #868686;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 330;
  font-size: 20px;
  width: 100%;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  float: left;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 4vw;
}
.jobDetailsKm {
  color: #868686;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 330;
  font-size: 20px;
  width: 100%;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 87%;
  width: 20%;
  float: left;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 4vw;
}
.jobDescriptionDetailsWrapper{
  text-align: left;
  padding: 0% 6% 6% 6%;
  margin-top: 5vh;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: rgb(51, 51, 51)
}

.jobPictureContainer {
  width: 100%;
  text-align: center;
  border-radius: 10px;
}

.jobPicture {
  width: 90%;
  border-radius: 1px;
  border: 1px solid #ccc
}

.jobDetailsStyling{
  font-size: 5vw;
  color: grey;
  margin-bottom: 1vh;
}

.jobDetailDescription{
  padding-left: 6%;
  font-size: 4vw;
}

.smallTextId {
  position: absolute;
  bottom: 0%;
  right: 0%;
  font-size: 8pt;
}

.patronBar{
  width: 90%;
  position: relative;
  display: flex;
  margin: 0 auto;
  padding-left: 4%;
  padding-top: 1%;
  margin-top: 2%;
}

*:focus {
  outline: none !important;
}

.jobDetailsPatronPicture {
  margin-right: 7%;
  width: 15vw;
  max-height: 15vw;
  border-radius: 100px;
}

/* Home page */

.swipeContainer {
  display: flex;
  flex-wrap: wrap;
  flex-flow: column;
}

.addJobContainer {
  width: 100%;
  height: 10vh;
}

.mandatoryText {
  color: #696969;
  width: 85%;
  font-size: 15px;
  padding-top: 4%;
  margin-left: 6%;
}

.innerMoonLoader {
  background-color: white;
  width: 100vw;
  position: fixed;
  height: 100%;
}

.moonLoader {
  position: relative;
  margin: 0 auto;
  width: max-content;
  height: 100%;
  background-color: white;
  top: 45vh;
}

.addJobButton {
  -webkit-border-radius: 10;
  -moz-border-radius: 10;
  border-radius: 5px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  background: #ffffff;  
  font-size: 1.5em;
  text-align: center;
  width: 7%;
  padding-top: 7%;
  text-decoration: none;
  font-weight: bold;
  border: none;
  position: relative;
  margin-left: 82%;
  margin-top: 10%;
  line-height: 0px;
  background-image: url(/plus.png);
  background-repeat: no-repeat;
  background-size: 100% auto;
}

.addJobInner {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  float: left;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 5vw;
}

.logoContainer {
  width: 100%;
  margin-bottom: 10%;
}

.logo2 {
  width: 40%;
  display: block;
  margin: 0 auto;
}

.stackContainer {
  position: relative;
  width: 80%;
  padding-top: 80%;
  margin: 0 auto;
}

.stack {
}

.bottomBar {
  height: 20%;
}

.jobPay {
  right: 5%;
  position: absolute;
}

.jobDistance {
  left: 5%;
  position: absolute;
}

.jobTitle {
  overflow: hidden;
  text-overflow: ellipsis;
}

.jobDetails {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  position: relative;
  top: 50%;
  left: 50%;
  width: 100%;
  float: left;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 4vw;
  font-weight: 300;
}

.wholeCard {
  z-index: 10;
  position: relative;
  height: fit-content;
}
.card {
  list-style: none;
  background: #fff;
  border: 1px solid #ccc;
  border-radius: 5px;
  text-align: center;
  box-sizing: border-box;
  cursor: default;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.noCards {
  background-image: url(/nothing.png);
  -webkit-background-size: contain;
  -moz-background-size: contain;
  -o-background-size: contain;
  background-size: contain;
  list-style: none;
  border-radius: 5px;
  text-align: center;
  box-sizing: border-box;
  cursor: default;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transform: none !important;
}

.cardImage {
  height: 80%;
  position: relative;
  width: 100%;
  object-fit: cover;
  border-radius: 5px 5px 0px 0px;
}

.navBar {
  width: 100%;
  padding-top: 7%;
  position: relative;
  height: 7vh;
}

.settingsLink {
  left: 9%;
  position: absolute;
}
/* ... */

